--- a/stylesheets/personalia.css
+++ b/stylesheets/personalia.css
@@ -46,6 +46,7 @@
     -webkit-backdrop-filter: blur(10px);
     margin: 35px 10px;
     max-width: 90vw;
+    max-height: 185px;
 }
 .contact-info__title{
     display: flex;
